030-software/fluxcd/apps/pocket-id/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
  labels:
    app: pocket-id
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: pocket-id
