030-software/fluxcd/apps/pocket-id/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocket-id
  annotations:
    dashboard.${domain}/icon: identifier
    dashboard.${domain}/name: pocket-id
    dashboard.${domain}/url: https://pocket-id.${domain}
spec:
  hostnames:
  - pocket-id.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: pocket-id
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
